<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/colorSelectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/box"
        android:layout_width="98dp"
        android:layout_height="89dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorSelectionLabel"
        app:srcCompat="@drawable/color_square" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="44dp"
        android:text="@string/color_hex_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/box" />

    <TextView
        android:id="@+id/hexText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.012"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/box" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:text="@string/color_rgb_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/rgbText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="40dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/redText"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/hexText"
        app:layout_constraintVertical_bias="0.484" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/red_label"
        app:layout_constraintBottom_toBottomOf="@+id/redBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/redBar"
        app:layout_constraintVertical_bias="1.0" />

    <SeekBar
        android:id="@+id/redBar"
        android:layout_width="160dp"
        android:layout_height="29dp"
        android:layout_marginTop="48dp"
        android:max="255"
        android:progress="64"
        app:layout_constraintEnd_toStartOf="@+id/redText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/greenBar"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/redText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/redBar"
        app:layout_constraintEnd_toEndOf="@+id/greenText"
        app:layout_constraintTop_toTopOf="@+id/redBar"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green_label"
        app:layout_constraintBottom_toBottomOf="@+id/greenBar"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/greenBar"
        app:layout_constraintVertical_bias="1.0" />

    <SeekBar
        android:id="@+id/greenBar"
        android:layout_width="164dp"
        android:layout_height="26dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:max="255"
        android:progress="128"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/redBar" />

    <TextView
        android:id="@+id/greenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/greenBar"
        app:layout_constraintStart_toEndOf="@+id/greenBar"
        app:layout_constraintTop_toTopOf="@+id/greenBar"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue_label"
        app:layout_constraintBottom_toBottomOf="@+id/blueBar"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/blueBar"
        app:layout_constraintVertical_bias="1.0" />

    <SeekBar
        android:id="@+id/blueBar"
        android:layout_width="162dp"
        android:layout_height="27dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:max="255"
        android:progress="0"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/greenBar" />

    <TextView
        android:id="@+id/blueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/blueBar"
        app:layout_constraintEnd_toEndOf="@+id/greenText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/blueBar"
        app:layout_constraintTop_toTopOf="@+id/blueBar"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/whiteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/white_button_label"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/blackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:text="@string/black_button_label"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/whiteButton"
        app:layout_constraintStart_toEndOf="@+id/whiteButton"
        app:layout_constraintTop_toTopOf="@+id/whiteButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/blueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/blue_button_label"
        android:backgroundTint="#0000FF"
        app:layout_constraintBottom_toBottomOf="@+id/whiteButton"
        app:layout_constraintEnd_toEndOf="@+id/blueText"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toEndOf="@+id/blackButton"
        app:layout_constraintTop_toTopOf="@+id/whiteButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reset_button_label"
        android:backgroundTint="#A6E8E1E1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blackButton" />

</androidx.constraintlayout.widget.ConstraintLayout>